--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
     "react-toastify": "^8.1.0",
     "react-typical": "^0.1.3",
     "rxjs": "^7.4.0",
+    "sass": "^1.49.10",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
